# grunnur

./: .coveragerc  .gitignore  .mypy.ini  .readthedocs.yml  .travis.yml  LICENSE.md  MANIFEST.in  README.md  README.rst  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/workflows/: docs.yml  lints.yml  tests.yml
doc/: api.rst  conf.py  history.rst  index.rst  introduction.rst  manual.rst  modules.rst  requirements.txt
docs/: api.rst  conf.py  history.rst  introduction.rst  modules.rst  requirements.txt
examples/: multi_device_comparison.py  temporary_allocations.py
grunnur/: __init__.py  _adapter_base.py  _adapter_cuda.mako  _adapter_cuda.py  _adapter_opencl.mako  _adapter_opencl.py  _api.py  _array.py  _array_metadata.py  _buffer.py  _context.py  _device.py  _device_discovery.py  _modules.py  _platform.py  _program.py  _queue.py  _static.py  _virtual_alloc.py  _vsize.py  adapter_base.py  adapter_cuda.py  adapter_opencl.py  api.py  api_discovery.py  array.py  array_metadata.py  backend_base.py  backend_cuda.py  backend_opencl.py  base_classes.py  buffer.py  context.py  cuda.mako  cuda.py  device.py  device_discovery.py  dtypes.py  functions.mako  functions.py  (+15 more)
grunnur/_testing/: __init__.py  _mock_base.py  _mock_factory.py  _mock_pycuda.py  _mock_pyopencl.py
grunnur/testing/: __init__.py  mock_base.py  mock_factory.py  mock_pycuda.py  mock_pyopencl.py
stubs/mako/: exceptions.pyi  template.pyi
stubs/pycuda/: compiler.pyi  driver.pyi  tools.pyi
stubs/pyopencl/: __init__.pyi
test/: conftest.py  mock_base.py  mock_pycuda.py  mock_pyopencl.py  test_api.py  test_api_discovery.py  test_array.py  test_array_metadata.py  test_basics.py  test_buffer.py  test_compile.py  test_context.py  test_cuda.py  test_device.py  test_device_discovery.py  test_dtypes.py  test_dtypes_on_device.py  test_functions.py  test_init.py  test_modules.py  test_platform.py  test_program.py  test_pytest_helpers.py  test_pytest_plugin.py  test_queue.py  test_sorted_list.py  test_static.py  test_template.mako  test_template.py  test_utils.py  test_virtual_alloc.py  test_vsize.py  test_vsize_on_device.py  utils.py
test/test_mocked/: test_api.py  test_array.py  test_buffer.py  test_context.py  test_device.py  test_device_discovery.py  test_init.py  test_platform.py  test_program.py  test_pytest_plugin.py  test_static.py  test_virtual_alloc.py
test/test_on_device/: test_array.py  test_buffer.py  test_dtypes.py  test_functions.py  test_program.py  test_static.py  test_virtual_alloc.py  test_vsize.py
test/test_utils/: test_array_metadata.py  test_modules.py  test_sorted_list.py  test_template.py  test_utils.py  test_vsize.py
tests/: conftest.py  mock_pycuda.py  mock_pyopencl.py  test_api.py  test_array.py  test_array_metadata.py  test_buffer.py  test_context.py  test_device.py  test_device_discovery.py  test_dtypes.py  test_dtypes_on_device.py  test_functions.py  test_init.py  test_modules.py  test_platform.py  test_program.py  test_pytest_plugin.py  test_queue.py  test_sorted_list.py  test_static.py  test_template.py  test_testing.py  test_utils.py  test_virtual_alloc.py  test_vsize.py  test_vsize_on_device.py  utils.py
