[project]
name = "grunnur"
dynamic = ["version"]
description = "Uniform API for PyOpenCL and PyCUDA."
authors = [
    {name = "Bogdan Opanchuk", email = "bogdan@opanchuk.net"},
]
dependencies = [
    'numpy>=1.22',
    'mako>=1',
]
requires-python = ">=3.8"
license = "MIT"
readme = "README.md"

[project.urls]
homepage = "https://github.com/fjarri/grunnur"

[project.optional-dependencies]
pyopencl = [
    "pyopencl>=2019.1.1",
]
pycuda = [
    "pycuda>=2019.1.1",
]
tests = [
    "pytest>=6",
    "pytest-cov",
    "pytest-grunnur>=0.1",
]
docs = [
    "sphinx>=4",
    "furo",
    "setuptools-scm>=7",
]
lint = [
    "mypy>=0.941",
    "black",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pdm]
version = { source = "scm" }

[tool.pdm.build]
source-includes = [
    "**/*.pyi",
    "examples/*.py",
    "tests/*.py",
    "docs/*.rst",
    "docs/*.py",
    "docs/*.bat",
    "docs/Makefile",
    ".coveragerc",
    ".mypy.ini",
    "pytest.ini",
]

[tool.setuptools_scm]

[build-system]
requires = [
    "pdm-pep517",
    "setuptools_scm[toml]>=7",
]
build-backend = "pdm.pep517.api"
